<resources>
    <string name="app_name">Stellar</string>
    <string name="app_desc">Learn together</string>

    <string name="main_name">Username</string>
    <string name="main_member">Member of 42 groups</string>
    <string name="main_all_groups">All groups</string>
    <string name="main_own_groups">Own groups</string>

    <string name="search_hint">Enter group name…</string>
    <string name="search_tags_header">Suggested tags</string>

    <string name="login_email_hint">email address</string>
    <string name="login_password_hint">password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_to_register">To register</string>
    <string name="login_invalid_email">Invalid email address format</string>

    <string name="register_rep_password">repeat password</string>
    <string name="register_create_account">Create account</string>
    <string name="register_to_login">To login</string>
    <string name="register_invalid_email">Invalid email address format</string>
    <string name="register_invalid_pass">Invalid password format</string>
    <string name="register_not_equal">Passwords are not equal</string>

    <string name="cpost_create_button">Post</string>
    <string name="cpost_new_message">New message:</string>
    <string name="cpost_philomenka">\@Philomenka</string>
    <string name="cpost_philomenka_threat">I am coming home…</string>
    <string name="cpost_message_hint">Enter message…</string>
    <string name="cpost_group_notif">Notify all members</string>
    <string name="cpost_hide_location">Hide</string>
    <string name="cpost_clear_location">Show my location</string>
    <string name="cpost_no_location">Could not locate</string>
    <string name="cpost_no_location_t">Turn on your GPS and internet to get current location</string>
    <string name="cpost_country_only">GPS signal low - only country located</string>
    <string name="cpost_loading_loc">Loading location…</string>
    <string name="cpost_photos">Attached photo</string>
    <string name="cpost_remove_photo">Remove</string>
    <string name="cpost_photo_name">Photo name</string>
    <string name="cpost_camera">Camera</string>
    <string name="cpost_gallery">Gallery</string>
    <string name="cpost_empty_message">Message cannot be empty</string>

    <string name="cgroup_create_button">Save</string>

    <string name="notif_delete_all_button">Delete all</string>

    <string name="profile_edit_photo">Edit photo</string>
    <string name="profile_log_out">Log out</string>

    <string name="copyright">Copyright © 2023</string>
</resources>