<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity"
    android:background="@color/background">
    <include
        layout="@layout/app_top_bar"
        android:id="@+id/cpost_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpost_top_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/cpost_message_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpost_new_message"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/logreg_bkg_design"
                android:backgroundTint="@color/component_bkg"
                android:padding="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/cpost_recipient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpost_philomenka"
                    android:textSize="16sp"
                    android:textColor="@color/text_gray"/>
                <TextView
                    android:id="@+id/cpost_recipient_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpost_philomenka_threat"
                    android:textSize="16sp"
                    android:textColor="@color/text_gray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/logreg_bkg_design"
                android:backgroundTint="@color/component_bkg"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/cpost_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="12"
                    android:maxLines="12"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:textColor="@color/text_gray"
                    android:textColorHint="@color/text_gray"
                    android:hint="@string/cpost_message_hint"
                    android:background="@color/component_bkg"/>
                    <ImageView
                        android:id="@+id/anyad"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/location_24" />
                <TextView
                    android:id="@+id/cpost_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:text="@string/cpost_clear_location"
                    android:layout_marginStart="5dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/cpost_hide_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:text="@string/cpost_hide_location"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/cpost_notify_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/cpost_group_notif"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpost_photos"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cpost_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/details_blue"
                    android:text="@string/cpost_camera"
                    android:textColor="@color/component_bkg"
                    android:textStyle="bold"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textAllCaps="false"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/cpost_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/details_blue"
                    android:text="@string/cpost_gallery"
                    android:textColor="@color/component_bkg"
                    android:textStyle="bold"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textAllCaps="false"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/cpost_remove_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:text="@string/cpost_remove_photo"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cpost_photo_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/done_24"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/cpost_photo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cpost_photo_name"
                    android:textColor="@color/text_gray"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/app_menu_bar"
        android:id="@+id/cpost_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>